2009-01-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-aliases, authors-fixed-case):
	Add some entries.

2009-01-19  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/ruby-mode.el: Autoload other interpreter names.

2009-01-19  Juanma Barranquero  <lekktu@gmail.com>

	* descr-text.el (describe-char-categories): New defsubst.
	(describe-char): Use it.

2009-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-ipv6-regexp): The regexp shall cover also
	IPv4 mapped IPv6 addresses.

2009-01-18  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/css-mode.el (css-backward-sexp): Stop once it reaches
	the beginning of the buffer.  (Bug#1949)

2009-01-18  Markus Triska  <markus.triska@gmx.at>

	* linum.el (linum-update-window): Use `delq' instead of `delete';
	compare strings with `equal-including-properties'.

2009-01-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-langs.el (declare-function): Add compatibility stub.
	(delete-duplicates, mapcan, cl-macroexpand-all): Declare.

	* emacs-lisp/eldoc.el (eldoc-minor-mode-string)
	(eldoc-message-commands, eldoc-print-current-symbol-info):
	Doc fix (consistent case of "ElDoc").

2009-01-17  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-format-entry): Simplify previous
	change.

2009-01-17  Eli Zaretskii  <eliz@gnu.org>

	* dos-w32.el (find-buffer-file-type-coding-system): If `(car
	TARGET)' does not exist, try again with its basename replaced by
	`(cdr TARGET)'.  Fixes Bug #1853.

	* international/mule-conf.el (raw-text, eight-bit): Doc fixes.

2009-01-16  Agustín Martín  <agustin.martin@hispalinux.es>

	* textmodes/flyspell.el (flyspell-post-command-hook): Do nothing
	unless flyspell-mode is enabled.
	(flyspell-pre-point): Make buffer-local.

2009-01-16  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-format-entry): For updating field
	delimiters, allow fields that are composed of strings and string